--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,6 +4,7 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: 'Jost', sans-serif;
 }
 
 a {
@@ -13,4 +14,10 @@ a {
 
 * {
   box-sizing: border-box;
+}
+
+body {
+  background-color: #faf9f8;
+  max-width: 450px;
+  margin: 0 auto;
 }
