--- a/styles/home.module.css
+++ b/styles/home.module.css
@@ -1,4 +1,29 @@
 .container {
     padding: 3rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
 
+.form {
+    margin: 2rem;
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
+}
+
+.input, .button {
+    padding: 10px;
+    font-family: 'Jost', sans-serif;
+    font-size: 16px;
+    border-radius: 4px;
+    border: 1px solid rgb(185, 185, 185);
+}
+
+.button:hover {
+    background-color: lightgrey;
+}
+
+.button:active {
+    background-color: rgb(187, 187, 187);
 }
