--- a/styles/home.module.css
+++ b/styles/home.module.css
@@ -2,7 +2,11 @@
     padding: 3rem;
     display: flex;
     flex-direction: column;
-    align-items: center;
+    /* align-items: center; */
+}
+
+.title, .list, .form {
+    align-self: center;
 }
 
 .form {
@@ -26,4 +30,8 @@
 
 .button:active {
     background-color: rgb(187, 187, 187);
+}
+
+.to-do-list {
+    list-style-type: none;
 }
